# diagnostic

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
docs/: changelog.md  conf.py  diagnostic.check.md  diagnostic.md  getting-started.md  index.md  recommendations.md  requirements.txt
docs/development/: design.md  index.md  internals.md  workflow.md
src/diagnostic/: __init__.py  _base.py  _check_docs.py  _concrete.py  _parsers.py  check-docs.py
tests/: helpers.py  test_base.py  test_check_docs.py  test_parser.py  test_render.py
tests/data/: error-color.yml  error.yml
tests/data/docs-code/: one.py  two.py
tests/data/docs-dir/: index.md
tests/data/docs-dir/errors/: crash.md  index.md  magic-karp.md  missing-argument.md
tests/data/docs-file/: conf.py  errors.md  index.md
tools/: demo-screenshots.py
