[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diagnostic"
authors = [{ name = "Pradyun Gedam", email = "mail@pradyunsg.me" }]
dynamic = ["version", "description"]
dependencies = [
    "rich",
    "markdown-it-py",
    "typing_extensions; python_version < '3.10'",
    "docutils",
]
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]

[project.optional-dependencies]
check-docs = ["docutils"]

[project.urls]
GitHub = "https://github.com/pradyunsg/diagnostic"
Documentation = "https://diagnostic.readthedocs.io/en/stable/"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff.isort]
known-first-party = ["diagnostic"]

[tool.pyright]
extraPaths = ["src/"]
typeCheckingMode = "strict"
